--- a/fooldal.html
+++ b/fooldal.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="bootstrap.min.js"></script>
     <title>Személyes könyvtár</title>
 </head>
@@ -14,7 +14,7 @@
     
     <ul>
         <li><a href="konyvfelvetel.html">+ Új könyv felvétele</a></li>
-        <li>Könyvtáram</li>
+        <li class="alahuzas">Könyvtáram</li>
       </ul>
 </body>
 </html>
