--- a/fooldal.html
+++ b/fooldal.html
@@ -15,6 +15,18 @@
     <ul>
         <li><a href="konyvfelvetel.html">+ Új könyv felvétele</a></li>
         <li class="alahuzas">Könyvtáram</li>
-      </ul>
+    </ul>
+
+    <div class="flex-container">
+        <div style="flex-grow: 1"></div>
+        <div style="flex-grow: 1"></div>
+        <div style="flex-grow: 1"></div>
+    </div>
+
+    <div class="flex-container">
+        <div style="flex-grow: 1"></div>
+        <div style="flex-grow: 1"></div>
+        <div style="flex-grow: 1"></div>
+    </div>
 </body>
 </html>
